[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/final.gd" type="Script" id=1]
[ext_resource path="res://sprites/textures.png" type="Texture" id=2]
[ext_resource path="res://scripts/sound.gd" type="Script" id=3]
[ext_resource path="res://sounds/char2.wav" type="Sample" id=4]
[ext_resource path="res://fonts/pixel4.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/gradual_text.gd" type="Script" id=6]
[ext_resource path="res://scripts/proc_anim.gd" type="Script" id=7]
[ext_resource path="res://shaders/white_sine_anim_SHADER.tres" type="Shader" id=8]
[ext_resource path="res://sprites/final.png" type="Texture" id=9]

[sub_resource type="SampleLibrary" id=1]

samples/char = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="DynamicFont" id=2]

font/size = 34
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=3]

shader/shader = ExtResource( 8 )
shader/shading_mode = 0
shader_param/anim_color = Plane( 0.9, 0.9, 0.9, 1 )
shader_param/anim_max_height = 0.6
shader_param/anim_speed_multiplier = 12.0
shader_param/opacity = 1.0

[node name="final" type="Node2D"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( -9.12247, -14.4399 )
transform/scale = Vector2( 18.7428, 30.9789 )
texture = ExtResource( 2 )
centered = false
modulate = Color( 0, 0, 0, 1 )
region = true
region_rect = Rect2( 0, 0, 24, 24 )

[node name="sound" type="Node2D" parent="." groups=[
"sound",
]]

script/script = ExtResource( 3 )

[node name="stream_player" type="StreamPlayer" parent="sound"]

stream/stream = null
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="env" type="SamplePlayer2D" parent="sound"]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 1 )
config/pitch_random = 0.0

[node name="tabs" type="Node2D" parent="."]

[node name="tab1" type="Node2D" parent="tabs"]

visibility/visible = false

[node name="text" type="Label" parent="tabs/tab1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 52.0
margin/top = 98.0
margin/right = 398.0
margin/bottom = 570.0
custom_fonts/font = SubResource( 2 )
text = "Whether this creature was a devil or not is no longer important."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )
final_text = ""
typing_speed = 0.1

[node name="tab2" type="Node2D" parent="tabs"]

visibility/visible = false

[node name="text" type="Label" parent="tabs/tab2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 48.0
margin/top = 109.0
margin/right = 394.0
margin/bottom = 581.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0.960938, 1 )
text = "The euphoria of victory gave him confidence that everything was over."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )
final_text = ""
typing_speed = 0.1

[node name="tab3" type="Node2D" parent="tabs"]

visibility/visible = false

[node name="text" type="Label" parent="tabs/tab3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 50.0
margin/top = 96.0
margin/right = 396.0
margin/bottom = 568.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.984375, 0, 1 )
text = "The thief can finally rest."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )
final_text = ""
typing_speed = 0.1

[node name="tab4" type="Node2D" parent="tabs"]

[node name="text" type="Label" parent="tabs/tab4"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 19.0
margin/top = 415.0
margin/right = 408.0
margin/bottom = 558.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.679688, 0, 1 )
text = "RUN COMPLETE"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 7 )
connected_node_path = null
is_sine_enable = true
sine_range = Vector2( 1, 1 )
sine_angle_increase_time = 0.03

[node name="Sprite" type="Sprite" parent="tabs/tab4"]

material/material = SubResource( 3 )
transform/pos = Vector2( 218.394, 300.028 )
transform/scale = Vector2( 4.28465, 4.28465 )
texture = ExtResource( 9 )


